Update index and login pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,1 @@
-<a href="{{auth_url}}" class="btn btn-primary btn-block" style="padding: 15px 0;">Login with Google</a>
+<a href="{{auth_url}}" class="btn btn-primary btn-block" style="padding: 15px 0;">Авторизироваться через Google</a>
