Change home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,6 @@
     </ul>
 </div><!-- /.navbar-collapse -->
 {%- else -%}
-<a href="{{url_for('login')}}" class="btn btn-primary btn-block" style="padding: 15px 0;">Войти</a>
+<!--<a href="{{url_for('login')}}" class="btn btn-primary btn-block" style="padding: 15px 0;">Войти</a>-->
+<p>Вы не авторизированы!</p>
 {%- endif -%}
