newbot functionality test

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
         <li><strong>Почта</strong>: {{current_user.email}}</li>
         <li><strong>Имя</strong>: {{current_user.name}}</li>
         <li><strong>Telegram ID</strong>: {{current_user.telegram_id}}</li>
+        <li><strong>token</strong>: {{current_user.tokens}}</li>
         <li><a href="{{url_for('logout')}}">Выйти</a></li>
     </ul>
 </div><!-- /.navbar-collapse -->
